<resources>
    <string name="app_name">LabOne</string>
    <string name="login_title_text">Login a Cidade Maravilhosa!</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Senha</string>
    <string name="cancel_text">Cancela</string>
    <string name="login_text">Login</string>
    <string name="forgot_password">Opa, esqueci minha senha!</string>
</resources>
