<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anthonysherbondy.labone.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/rio"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-10dp"
        android:layout_alignTop="@+id/tvLoginTitle"
        android:layout_alignBottom="@+id/tvForgot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#a42e2e2e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_title_text"
        android:id="@+id/tvLoginTitle"
        android:textColor="#f1f1f1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:textColor="#e1e1e1"
        android:textColorHint="@color/colorControlNormal"
        android:ems="10"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/email_placeholder"
        android:id="@+id/etEmail"
        android:layout_below="@+id/tvLoginTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="#e1e1e1"
        android:textColorHint="@color/colorControlNormal"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:id="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etEmail" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:id="@+id/btnCancel"
        android:onClick="onCancel"
        android:layout_below="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/btnLogin"
        android:onClick="onLogin"
        android:backgroundTint="@color/colorAccent"
        android:layout_below="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:layout_alignEnd="@+id/etPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:text="@string/forgot_password"
        android:onClick="onForgot"
        android:id="@+id/tvForgot"
        android:layout_below="@+id/btnCancel"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
